Details
-
Type:
Bug
-
Status: Closed
-
Priority:
Not Evaluated
-
Resolution: Done
-
Affects Version/s: 5.2.0
-
Fix Version/s: 5.2.1
-
Component/s: Widgets: Itemviews
-
Labels:None
-
Commits:Revert: 0e69230d02813f0b7a050645fb7e443bd504ab6a (release branch, 14.1.2014, 5.2.1) 0e69230d02813f0b7a050645fb7e443bd504ab6a
Description
Change I8a61d310: QAIV - Fix scollbars with ScrollPerPixel to scroll 1 pixel.
This broken the nice old behaviour.
I suggest to use it until user explicity define setSingleStep. Or maybe set default value, maybe 15 pixels.
I think neverbody want to use 1 pixel.
Also see: https://bugreports.qt-project.org/browse/QTBUG-7232
Attachments
Issue Links
- is related to
-
QTBUG-7232 Smooth scrolling (scroll per pixel) in ItemViews does not work as expected
-
- Closed
-
-
QTBUG-34953 Regression: Widget Box scrolls only one pixel at a time
-
- Closed
-
- relates to
-
QTBUG-36075 Slow scrolling of a listview in QListView::IconMode using QAbstractItemView::ScrollPerItem
-
- Closed
-
- replaces
-
QTBUG-36604 Qt Designer: Slow scroll movement in resource view
-
- Closed
-