Added a new splitter bar between the Search Phrases and the Search Results.  Bumped the persistent settings version so these will hopefully update correctly and not be strangely collapsed on people. Changed default for Show Highlighting in Search Results to be True. Changed default for the Chapter Scrollbar Mode to be CSME_NONE (off) since it seems to be confusing a lot of people. Added work-around to the CSearchResultsTreeView to calculate a Vertical Scrollbar StepSize based on the font metrics to simulate what was going on in Qt 4 since Qt 5 redefines scroll by pixel to be literally by pixels instead of a linear range of pixels.  This is awaiting the outcome of QTBUG-33906.

git-svn-id: file:///home/dewhisna/Documents/programs/Bible/svndump/purebiblesearch_150731/code_gitcvt/trunk@781 523e89ec-37fb-4b40-b97f-42a194c95123